--- a/05/src/_template.pug
+++ b/05/src/_template.pug
@@ -1,7 +1,20 @@
-doctype
+doctype 
 html(lang="en")
 	head
 		meta(charset="UTF-8")
-		block head
+		block title
 	body
-		block body
+		div(class="conteiner" style="width: 300px")
+			div(class="header")
+			block h1
+			div(class="navigation") 
+				p Navigation: 
+					block navigationOne
+				hr
+				p
+					block navigationTwo
+			div(class="content" style="padding-left: 10px")
+				block content
+			div(class="footer")
+				hr
+				block footer						
