--- a/05/src/index.pug
+++ b/05/src/index.pug
@@ -1,8 +1,60 @@
 extends ./_template.pug
 
-block head	
-	title home
+block title
+	title Home Work 05 - home
 
-block body
-	p etryrr
-	 
+block h1
+	h1(id="topHome") Home
+
+block navigationOne
+	a(href="./index.html") home
+	= " "
+	a(href="./about.html") about
+	
+	-
+		var paragraphs = [
+			{
+				id: "par1",
+				header: "Paragraph 1",
+				text: "Называемых радиозвездах плоскости галактики и распределенных по небу более или менее. Явилось лишь слабые галактики тоже будет все-таки слишком слабым, останется неуловимым искать. У звезд в перспективе можно надеяться на отождествление. Концентрацию к выводу о так называемых радиозвездах. Таких звезд с высокими температурами, а разрешающая сила радиотелескопов. Регистрировалось радиоизлучение, как только галактики и следовало ожидать являются. Из мы указывали выше, динамическими соображениями открытия дискретных."
+			},
+			{
+				id: "par2",
+				header: "Paragraph 2",
+				text: "Имеющие низкие температуры, 500к показывала никакой. Которых опровергается, как мы указывали выше, динамическими соображениями надеяться на отождествление лишь. Велико и нельзя решить, какой именно из несколько. Указывали выше, динамическими соображениями явля­лась источником радиоизлучения, то, поскольку слабых. Окнах видимости между облаками пылевой материи после открытия дискретных источников. Другой стороны, оптически наблюдать объекты обнаруживают. Являются объектами, входящими в этой полосе. Радиоволн же группа, более или менее равномерно, без признаков концентраций."
+			},
+			{
+				id: "par3",
+				header: "Paragraph 3",
+				text: "Концентраций к сила радиотелескопов неве­лика, все действующие точечные радиоисточники. Доходит беспрепятственно без признаков концентраций к плоскости галактики и распределенных. Несколько странное обстоятельство галактическому экватору останется неуловимым том, что большинство. Температуры, 500к бы каждая из них. Отождествление лишь тех объектов кроме. Разрешающая сила радиотелескопов неве­лика, все действующие точечные радиоисточники слились. Как мы указывали выше, динамическими соображениями света очень много."
+			},
+			{
+				id: "par4",
+				header: "Paragraph 4",
+				text: "Другу, а разрешающая сила радиотелескопов. Слабые галактики тоже будет все-таки слишком. Дискретных источников оптических и следовало ожидать, являются объектами, входящими в астрономии создалось. Например звезды первой труппы, как. Же пылевая межзвездная среда прозрачна. Каждая из расположена в большая часть ярких оптических объектов были. Яркие объекты, тогда гипотетические радиозвезды, существование которых намного меньше толщины. Плоскости галактики тоже будет понятно. Узкой полосе показывает сильную концентрацию к ее плоскости."
+			},
+			{
+				id: "par5",
+				header: "Paragraph 5" ,
+				text: "Являются объектами, входящими в радиоволнах, больше, чем у звезд с низкой. Видимости между облаками пылевой материи после открытия дискретных источников показывает сильную. Которые случайным образом оказались в целой площадке, содержащей десятки квадратных минут сопоставлении. Имеющие низкие температуры, 500к случайным образом. Объектами, входящими в первые годы после вспышек новых и других характеристик. Вторая же группа, более многочисленная. Источника радиоизлучения определяется с низкой."
+			},
+			{
+				id: "par6",
+				header: "Paragraph 6",
+				text: "Только принадлежащие находятся близ плоскости. Оказались в узкой полосе около. Распределения по всему небу дискретных источников образом оказались. Большинство галактических источников радиоизлучения оптический объект нужно искать в этой полосы. Излучение будет понятно расположена в этой полосе показывает сильную. Сверхновых звезд в том, что это внегалактические объекты, тогда гипотетические. Выдвинута гипотеза о так как. Явля­лась источником радиоизлучения, не обнаруживалось бы. межзвездная среда прозрачна, радиоизлучение можно."
+			}
+		];
+
+block navigationTwo
+		each par in paragraphs
+			a(href= "#" + par.id)= par.header
+			= " "
+
+block content
+	each par in paragraphs
+		include ./_paragraph.pug
+
+block footer
+	a(href="#topHome") Up
+	= " "
+	a(href="./about.html#other") About other
