--- a/12/style.css
+++ b/12/style.css
@@ -1,23 +1,43 @@
-html, body 
+html, body, .container 
 {
-    height: 100%;
+	height: 100%;
+	width: 
 }
-div.col-3
+.main
 {
-    background-color: marine;
+	height: calc(100% - 200px);
+
+	display: flex;
+	flex-direction: row;
 }
-div.content
+.menu, .header, .footer
 {
-    background-color: blue;
-    height: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: #2becde;
 }
-.row.header, .row.footer
+div.header
 {
-    margin-right: auto;
-    margin-left: auto;
+	display: flex;
+	justify-content: space-around;
+	height: 100px;
+	background-color: #987188;
 }
-.header, .footer
+div.footer
 {
-    height: 100px;
-    background-color: pink;
+	height: 100px;
+	background-color: pink;
+}
+
+.navbar-brand
+{
+	width: 100px;
+	height: 100px;
+}
+.navbar
+{
+	align-items: center;
+	width: 100%;
 }
