--- a/12/style.css
+++ b/12/style.css
@@ -1,7 +1,8 @@
 html, body, .container 
 {
 	height: 100%;
-	width: 
+	min-width: 300px;
+
 }
 .main
 {
@@ -22,22 +23,50 @@ div.header
 {
 	display: flex;
 	justify-content: space-around;
-	height: 100px;
+	min-height: 100px;
 	background-color: #987188;
-}
-div.footer
-{
-	height: 100px;
-	background-color: pink;
-}
-
-.navbar-brand
-{
-	width: 100px;
-	height: 100px;
+	overflow-y: auto;
 }
 .navbar
 {
 	align-items: center;
 	width: 100%;
+}
+.navbar-light .navbar-nav .nav-link:hover
+{
+	color: white;
+	transition: 0.2s;
+}
+.navbar-light .navbar-nav .nav-link.disabled
+{
+	color:rgba(0, 0, 0, 0.3) ;
+}
+.navbar-light .navbar-nav .nav-link.active
+{
+	color:rgba(255, 255, 255, 0.7) ;
+}
+.btn.btn-outline-success.my-2.my-sm-0
+{
+	background-color: yellow;
+	color: green;
+}
+.btn.btn-outline-success.my-2.my-sm-0:hover
+{
+	background-color: green;
+	color: white;
+	transition: 0.2s;
+}
+.content
+{
+	position: relative;
+}
+#carouselExampleSlidesOnly
+{
+	height: calc(100%-50px);
+	width: 100%;
+}
+div.footer
+{
+	height: 100px;
+	background-color: pink;
 }
