--- a/12/style.css
+++ b/12/style.css
@@ -62,7 +62,9 @@ div.header
 }
 #carouselExampleSlidesOnly
 {
-	height: calc(100%-50px);
+	max-height: 600px;
+	max-width: 700px;
+
 	width: 100%;
 }
 div.footer
