--- a/13/src/index.pug
+++ b/13/src/index.pug
@@ -1,14 +1,7 @@
 extend ./_template.pug
 
-block head
-
-
-
-
 block container
 	include ./_navbar.pug
-
-
-
-block body
-
+	div.row
+		+createNavLinks(navItems,pages)
+		include ./_links_pages.pug
