--- a/15/style.css
+++ b/15/style.css
@@ -1,4 +1,72 @@
 body
 {
-	background: url(); 
+	background-image: url(./images/morocco/morocco/morocco.png); 
+}
+.menu
+{
+	padding: 0;
+	margin: 50px;
+
+	list-style: none;
+	font-size: 14pt;
+}
+.menu-link
+{
+	display: block;
+	
+	margin: 1px;
+	padding-left: 10px;
+
+	width: 200px;
+	height: 30px;
+	line-height: 30px;
+
+	background-color: gray;
+
+	text-transform: uppercase;
+	text-decoration: none;
+	color: white;
+
+	cursor: pointer;
+}
+.menu-link:hover
+{
+	background-color: blue;
+}
+.menu-link.menu-title-link
+{
+	position: relative; 
+
+	font-size: 1.2em;
+	text-indent: 36px;
+
+	height: 50px;
+	line-height: 50px;
+}
+.menu-link.menu-title-link::before
+{
+	content: " ";
+
+	display: block;
+	position: absolute;
+
+	width: 50px;
+	height: 50px;
+	left: 0;
+}
+.menu-main .menu-link.menu-title-link::before
+{
+	background: url(./images/home.png) center no-repeat; 
+}
+.menu-settings .menu-link.menu-title-link::before
+{
+	background: url(./images/settings.png) center no-repeat; 
+}
+.menu-links .menu-link.menu-title-link::before
+{
+	background: url(./images/link.png) center no-repeat; 
+}
+.menu-search .menu-link.menu-title-link::before
+{
+	background: url(./images/search.png) center no-repeat; 
 }
