--- a/15/style.css
+++ b/15/style.css
@@ -6,15 +6,37 @@ body
 {
 	padding: 0;
 	margin: 50px;
+	width: 50px;
 
 	list-style: none;
 	font-size: 14pt;
+
+	opacity: .5;
+}
+.menu:hover
+{
+	opacity: 1;
+	transition: opacity .3s;
+}
+.menu-direction__closed
+{
+	width: 50px;
+	height: 50px;
+	
+	overflow: hidden;
+	transition: .5s ease-in-out
+}
+.menu-direction__opened
+{
+	width: 200px;
+	
+	transition: width .2s ease-in-out, 
+				height 0.2s ease-in-out 0.2s;
 }
 .menu-link
 {
 	display: block;
 	
-	margin: 1px;
 	padding-left: 10px;
 
 	width: 200px;
@@ -32,13 +54,14 @@ body
 .menu-link:hover
 {
 	background-color: blue;
+	transition: background-color 0.3s;
 }
 .menu-link.menu-title-link
 {
 	position: relative; 
 
 	font-size: 1.2em;
-	text-indent: 36px;
+	text-indent: 40px;
 
 	height: 50px;
 	line-height: 50px;
