--- a/15/style.css
+++ b/15/style.css
@@ -1,22 +1,23 @@
 body
 {
 	background-image: url(./images/morocco/morocco/morocco.png); 
+	padding: 50px;
 }
 .menu
 {
 	padding: 0;
-	margin: 50px;
+	margin: 0;
 	width: 50px;
 
 	list-style: none;
 	font-size: 14pt;
 
 	opacity: .5;
+	transition: opacity 0.3s ease-in-out;
 }
 .menu:hover
 {
 	opacity: 1;
-	transition: opacity .3s;
 }
 .menu-direction__closed
 {
@@ -24,7 +25,9 @@ body
 	height: 50px;
 	
 	overflow: hidden;
-	transition: .5s ease-in-out
+	transition: background .5s ease-in-out,
+				width .2s ease-in-out, 
+				height 0.2s ease-in-out 0.2s;
 }
 .menu-direction__opened
 {
@@ -36,14 +39,14 @@ body
 .menu-link
 {
 	display: block;
-	
 	padding-left: 10px;
+	
+	background-color: gray;
 
 	width: 200px;
 	height: 30px;
 	line-height: 30px;
 
-	background-color: gray;
 
 	text-transform: uppercase;
 	text-decoration: none;
