--- a/16/sass/style.sass
+++ b/16/sass/style.sass
@@ -21,7 +21,7 @@
 			align-items: flex-start
 			&__selected &-text
 				@include сolor($firstColor)
-				@include font(0,b)
+				@include font(0,b) //проблема
 
 
 		
