--- a/16/sass/mixin.sass
+++ b/16/sass/mixin.sass
@@ -13,6 +13,12 @@
 		font-style: italic
 
 @mixin margin($tp,$rt:null,$bm:null,$lt:null)
+	@if $tp == del
+		margin: 0
+	@else 
+		@include marginAdd($tp,$rt,$bm,$lt)
+
+@mixin marginAdd($tp,$rt,$bm,$lt)
 	@if $tp != 0
 		margin-top: #{$tp}
 	@if $rt != 0	
