--- a/16/sass/style.sass
+++ b/16/sass/style.sass
@@ -11,7 +11,7 @@
 	&_question
 		@include margin(0,0,1.5em)
 		@include сolor($firstColor)
-		@include font(24,b) //проблема
+		@include font(24,b)
 	&_options
 		display: flex
 		flex-direction: column
@@ -21,7 +21,4 @@
 			align-items: flex-start
 			&__selected &-text
 				@include сolor($firstColor)
-				@include font(0,b) //проблема
-
-
-		
+				@include font(0,b)
