homework almost finished, necessary connect json to sass!

--- a/17/src/sass/_mixin.sass
+++ b/17/src/sass/_mixin.sass
@@ -1,4 +1,4 @@
-@mixin сolor($color,$type:null)
+@mixin color($color,$type:null)
 	@if $type
 		#{$type}-color: $color
 	@else 
@@ -28,3 +28,5 @@
 		margin-bottom: $bm
 	@if $lt != 0	
 		margin-left: $lt
+
+
