--- a/17/src/pug/index.pug
+++ b/17/src/pug/index.pug
@@ -1,3 +1,7 @@
-html
-	body
-		div.test= menu.items[3].text
+extend ./_template.pug
+include ./_mixins.pug
+
+block body
+	div.navbar
+		ul.menu
+			+createList(menu.items)
