--- a/18/src/pug/_template.pug
+++ b/18/src/pug/_template.pug
@@ -6,5 +6,5 @@ html
 
 		link(rel="stylesheet" type="text/css" href="./style/style.css")
 	body
-		block body
+		block navbar
 		script(src="/js/main.js")
