--- a/18/src/style/style.sass
+++ b/18/src/style/style.sass
@@ -1,2 +1,8 @@
-.test
-		color: red
+$bodyBackColor: #6edc6e
+
+body
+	background-color: $bodyBackColor
+	padding: 0
+	margin: 0
+
+@import "./component/header"	
